[gd_scene load_steps=11 format=2]

[ext_resource path="res://Items/Marbles/Sprites/Marble_blue.png" type="Texture" id=1]
[ext_resource path="res://Items/Marbles/Sprites/Marble_gloss.png" type="Texture" id=2]
[ext_resource path="res://Items/Marbles/Marble.gd" type="Script" id=3]
[ext_resource path="res://Items/Marbles/Sprites/Marble_yellow.png" type="Texture" id=4]
[ext_resource path="res://Items/Marbles/Sprites/Marble_green.png" type="Texture" id=5]
[ext_resource path="res://Items/Marbles/Sprites/Marble_purple.png" type="Texture" id=6]
[ext_resource path="res://Effects/Particles/SparkleMedium.tscn" type="PackedScene" id=7]
[ext_resource path="res://Effects/Light_circle.png" type="Texture" id=8]

[sub_resource type="PhysicsMaterial" id=2]
bounce = 1.0

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[node name="Marble" type="RigidBody2D"]
collision_layer = 4
physics_material_override = SubResource( 2 )
angular_damp = 0.1
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
texture_list = {
"blue": ExtResource( 1 ),
"green": ExtResource( 5 ),
"purple": ExtResource( 6 ),
"yellow": ExtResource( 4 )
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="BallSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="GlossSprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
texture = ExtResource( 2 )

[node name="HoverRayCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 32 )

[node name="SparkleMedium" parent="." instance=ExtResource( 7 )]

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 8 )
color = Color( 0.866667, 0.67451, 0.27451, 1 )
energy = 0.5

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
